# AIwebWallet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TZ.md  docker-compose.yml  render.yaml
crates/api-server/: Cargo.toml
crates/api-server/src/: chains.rs  config.rs  dto.rs  indexer.rs  lib.rs  main.rs  pricing.rs  ratelimit.rs  routes.rs  simulation.rs  state.rs
crates/api-server/src/ai/: chat.rs  mod.rs  openai.rs  tools.rs
crates/api-server/src/handlers/: analytics.rs  balances.rs  chat.rs  fees.rs  health.rs  history.rs  mod.rs  prices.rs  tx.rs  tx_params.rs
crates/api-server/src/risk/: mod.rs
crates/api-server/tests/: api.rs  live.rs  middleware.rs  security.rs
crates/chain-adapters/: Cargo.toml
crates/chain-adapters/src/: bitcoin.rs  error.rs  evm.rs  jsonrpc.rs  lib.rs  reliability.rs  solana.rs  tron.rs  types.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: error.rs  evm_tx.rs  lib.rs  mnemonic.rs  vault.rs  wasm.rs
crates/wallet-core/src/derivation/: bitcoin.rs  evm.rs  mod.rs  solana.rs  tron.rs
docs/: AMO_BUILD.md  AMO_LISTING.md  DEPLOY.md  PRIVACY.md  _config.yml  index.md
extension/: .env.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts  injected.ts
extension/entrypoints/popup/: App.tsx  index.html  main.tsx  style.css
extension/scripts/: build-icons.mjs  build-wasm.mjs  check-locales.mjs  smoke-multivault.mjs  test-security.mjs  test-utils.mjs  test-vault-migration.mjs  wxt-browser-stub.mjs
extension/src/: env.d.ts
extension/src/components/: ErrorBoundary.tsx  SelectMenu.tsx  backend-status.tsx  chain-icons.tsx  consent.tsx  icons.tsx  token-icons.tsx  ui.tsx
extension/src/i18n/: index.ts  locales.ts
extension/src/lib/: api-types.ts  api.ts  approval-queue.ts  chains.ts  connections.ts  consent.ts  evm.ts  format.ts  i18n-bridge.ts  messaging.ts  mock-data.ts  provider.ts  runtime.ts  solana-wallet-standard.ts  sse.ts  vault-storage.ts  wallet-core.ts
extension/src/locales/: README.md  ar.json  bn.json  de.json  en.json  en.notes.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pl.json  pt.json  ru.json  tr.json  uk.json  ur.json  vi.json  zh-CN.json
extension/src/screens/: Activity.tsx  Analytics.tsx  Approve.tsx  Chat.tsx  ConnectedSites.tsx  DataConsent.tsx  Home.tsx  Onboarding.tsx  Receive.tsx  RestoreWallet.tsx  Send.tsx  Settings.tsx  TxDetail.tsx  Unlock.tsx
extension/src/store/: wallet.ts
extension/src/wasm/: index.ts
