[package]
name = "chain-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Blockchain network adapters (EVM, Solana, Bitcoin) for AI Wallet"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# sync — короткий кеш акаунтів TronAdapter + семафор rate-limit;
# time — sleep для експоненційного backoff у reliability-шарі.
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
